@@ -1,3 +1,7 @@
+2008-04-01  Mirco Bauer <meebey@meebey.net> 
+
+	* Entry.cs: Don't prevent ctrl+a/left/right/backspace key shortcuts.
+
 2008-03-04  Mirco Bauer <meebey@meebey.net> 
 
 	* Preferences/ServerView.cs: Added defaults for ICQ/AIM/MSNP.
