@@ -1,3 +1,7 @@
+2008-04-01  Mirco Bauer <meebey@meebey.net> 
+
+	* IrcGroupChatView.cs: Fixed whitespace.
+
 2008-01-31  Mirco Bauer <meebey@meebey.net> 
 
 	* AssemblyInfo.cs: Bumped version to 0.5.30.
